--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: '3'
 services:
   app:
     container_name: rotten-potatoes
-    image: rotten-potatoes:v1.0.0
+    image: felipeschirmann/rotten-potatoes:v1.0.0
     environment:
       MONGODB_DB: admin
       MONGODB_USERNAME: mongouser
